Adding artist, genre and song

--- a/templates/add-genre.html
+++ b/templates/add-genre.html
@@ -6,7 +6,7 @@
     <form method="post" class="input-group mb-3">
 
         <input type="text" class="form-control"
-               placeholder="Artist name" name="name" {% if artist %} value="{{ artist[1] }}" {% endif %}>
+               placeholder="Genre name" name="name" {% if genre %} value="{{ genre[1] }}" {% endif %}>
 
         <input type="submit" class="btn btn-success">
     </form>
