--- a/templates/songs.html
+++ b/templates/songs.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="d-grid gap-2 col-6 mx-auto">
-        <a href="/add-artist" class="btn btn-primary" type="button">Add artist</a>
+        <a href="/add-song" class="btn btn-primary" type="button">Add song</a>
     </div>
 
     <br>
@@ -11,24 +11,24 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>Artist name</th>
-            <th>Songs</th>
+            <th>Song name</th>
+            <th>Artist</th>
             <th>Link 1</th>
             <th>Link 2</th>
         </tr>
         </thead>
 
         <tbody>
-        {% for artist in artists %}
+        {% for song in songs %}
             <tr>
-                <td>{{ artist[0] }}</td>
-                <td>{{ artist[1] }}</td>
-                <td>Songs</td>
+                <td>{{ song[0] }}</td>
+                <td>{{ song[1] }}</td>
+                <td>{{ song[2] }}</td>
                 <td>
-                    <a href="./{{ artist[0] }}/delete" class="btn btn-danger">Delete</a>
+                    <a href="{{ request.path }}/{{ song[0] }}/delete" class="btn btn-danger">Delete</a>
                 </td>
                 <td>
-                    <a href="./{{ artist[0] }}/edit" class="btn btn-warning">Edit</a>
+                    <a href="{{ request.path }}/{{ song[0] }}/edit" class="btn btn-warning">Edit</a>
                 </td>
             </tr>
         {% endfor %}
