--- a/templates/base.html
+++ b/templates/base.html
@@ -23,15 +23,13 @@
                 <li><a href="/songs" class="nav-link px-2 text-white">Songs</a></li>
             </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark text-white bg-dark" placeholder="Search..."
-                       aria-label="Search">
+            <form class="d-flex" role="search" method="get" action="/search">
+                <input name="query" type="search"
+                       class="form-control form-control-dark text-white bg-dark me-2"
+                       placeholder="Search..."
+                       aria-label="Search" required>
+                <button type="submit" class="btn btn-success">Search</button>
             </form>
-
-            <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
-            </div>
         </div>
     </div>
 </header>
